discussion/kv_engine/130419/130419_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP MB-39815: Migrate DurabilityCompletionTask to folly Executors

Change-Id: Ia70a68f4d1551a3407c8bdbb56e91eb5f5f995e2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-10-21 13:29:21.000000000
Message: 
Patch Set 3: Patch Set 2 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2020-10-21 13:29:32.000000000
Message: 
Patch Set 3:

This change is ready for review.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-10-21 13:39:23.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5216/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/durability/durability_monitor_impl.h:712:34: error: no viable conversion from "std::chrono::time_point<std::chrono::_V2::steady_clock, std::chrono::duration<long, std::ratio<1, 1000000000> > >" to "Monotonic<std::chrono::steady_clock::time_point, ThrowExceptionPolicy>" (aka "Monotonic<time_point<std::chrono::_V2::steady_clock, duration<long, ratio<1, 1000000000> > >, ThrowExceptionPolicy>") [clang-diagnostic-error]
            nextTrackedTimeout = std::chrono::steady_clock::time_point::max();
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/monotonic.h:127:5: note: candidate constructor not viable: no known conversion from "std::chrono::time_point<std::chrono::_V2::steady_clock, std::chrono::duration<long, std::ratio<1, 1000000000> > >" to "const Monotonic<std::chrono::time_point<std::chrono::_V2::steady_clock, std::chrono::duration<long, std::ratio<1, 1000000000> > >, ThrowExceptionPolicy, cb::greater> &" for 1st argument
    Monotonic(const Monotonic& other)
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5216/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/durability/durability_monitor_impl.h:712:34:
error: no viable conversion from "std::chrono::time_point<std::chrono::_V2::steady_clock, std::chrono::duration<long, std::ratio<1, 1000000000> > >" to "Monotonic<std::chrono::steady_clock::time_point, ThrowExceptionPolicy>" (aka "Monotonic<time_point<std::chrono::_V2::steady_clock, duration<long, ratio<1, 1000000000> > >, ThrowExceptionPolicy>") [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5216/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3745/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
